crates/vize/tests/snapshots/integration__project_config_cli__project_settings_lint_override.snap
---
source: crates/vize/tests/project_config_cli.rs
expression: "serde_json::to_string_pretty(&support::normalized_report(root,\nreport)).unwrap()"
---
[
  {
    "errorCount": 1,
    "file": "Image.vue",
    "messages": [
      {
        "column": 11,
        "endColumn": 11,
        "endLine": 1,
        "help": "Rename the component to use multiple words (e.g., \"TodoItem\" instead of \"Item\")",
        "line": 1,
        "message": "[vize:vue/multi-word-component-names] Component name \"Image\" should be multi-word to avoid conflicts with HTML elements",
        "ruleDocsPath": "docs/content/rules/vue.md",
        "ruleId": "vue/multi-word-component-names",
        "severity": 2
      }
    ],
    "warningCount": 0
  }
]
