crates/vize/tests/snapshots/integration__project_config_cli__project_settings_lint_vite.snap
---
source: crates/vize/tests/project_config_cli.rs
expression: "serde_json::to_string_pretty(&support::normalized_report(root,\nreport)).unwrap()"
---
[
  {
    "errorCount": 2,
    "file": "Image.vue",
    "messages": [
      {
        "column": 11,
        "endColumn": 11,
        "endLine": 1,
        "help": "Rename the component to use multiple words (e.g., \"TodoItem\" instead of \"Item\")",
        "line": 1,
        "message": "[vize:vue/multi-word-component-names] Component name \"Image\" should be multi-word to avoid conflicts with HTML elements",
        "ruleDocsPath": "docs/content/rules/vue.md",
        "ruleId": "vue/multi-word-component-names",
        "severity": 2
      },
      {
        "column": 3,
        "endColumn": 28,
        "endLine": 2,
        "help": "Add an alt attribute: <img alt=\"Description\"> or <img alt=\"\"> for decorative images",
        "line": 2,
        "message": "[vize:a11y/alt-text] <img> elements must have an alt attribute",
        "ruleDocsPath": "docs/content/rules/accessibility.md",
        "ruleId": "a11y/alt-text",
        "severity": 2
      }
    ],
    "warningCount": 0
  }
]
